smm-1.8.0/multiCloudDeployments/control/Tea-Store/istio/webui-mesh-gw.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  labels:
    app: teastore-webui-ingressgateway
  name: teastore-webui-ingressgateway
  namespace: tea-store
spec:
  selector:
    gateway-name: teastore-webui-mesh-gateway
    gateway-type: ingress
  servers:
  - hosts:
    - "*"
    port:
      name: http
      number: 8080
      protocol: HTTP
